# GOMOLAB-vMixControl

./: .gitignore  SETUP.md  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
electron/: main.cjs  preload.cjs
public/: timerWorker.js
scripts/: increment-build.mjs
src/: App.tsx  index.css  main.tsx  polyfill.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  ndi.rs  server.rs
src/api/: nativeApi.ts  vmixApi.ts
src/components/: AppSettingsModal.tsx  AudioPage.tsx  BracketView.tsx  Canvas.tsx  CanvasTournamentPicker.tsx  ConfirmButton.tsx  ConfirmModal.tsx  ConnectionSetup.tsx  DataPage.tsx  EventPicker.tsx  ExternalRosterPicker.tsx  InputList.tsx  LogoUrlPicker.tsx  MatchSchedulePicker.tsx  MixPage.tsx  NotificationOverlay.tsx  ProjectMenu.tsx  ScorePage.tsx  ShortcutPanel.tsx  SignInGate.tsx  SplashScreen.tsx  StatusBar.tsx  TabBar.tsx  TeamHistoryList.tsx  TeamMatchHistoryButton.tsx  TeamPicker.tsx  TitleBar.tsx  TitleEditor.tsx  TournamentManager.tsx  TransitionControls.tsx  UndoControl.tsx  UndoToast.tsx  VmixStatsPanel.tsx  WidgetConfigPanel.tsx  WidgetPalette.tsx
src/lib/: canvasContext.ts  cloudSync.ts  deepLink.ts  externalRoster.ts  headToHead.ts  imageUrl.ts  ndiPreview.ts  scheduleGen.ts  shootout.ts  syncClient.ts  teamForm.ts  teamTournamentStats.ts
src/stores/: appSettingsStore.ts  authStore.ts  canvasStore.ts  cloudSyncStatusStore.ts  teamDbStore.ts  (+5 more)
(+50 files in other folders)
